# tick

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
assets/: tick.schema.json
docs/: agent-ergonomics.md  design.md  roadmap.md
docs/lld/: 018-agent-ergonomics-json.md
docs/user-stories/: agent-ergonomics-map.md  completions.md  config.md  daily.md  exit-codes.md  init.md  list.md  mv.md  new.md  review.md  skill.md  status.md
skills/ishi/: SKILL.md
src/: category.rs  cli.rs  config.rs  items.rs  main.rs  review.rs
tests/: cli_config.rs  cli_daily.rs  cli_init.rs  cli_move.rs  cli_new.rs  cli_review.rs
tests/common/: mod.rs
