[package]
name = "tick"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["cargo", "derive"] }
env_logger = "0.11.11"
log = "0.4.33"
thiserror = "1"
anyhow = "1"
tempfile = "3"
chrono = { version = "0.4", features = ["clock"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde_json = "1"
