[package]
name = "ishi"
version = "0.1.0"
edition = "2024"

[lib]
name = "ishi"
path = "src/lib.rs"

[[bin]]
name = "ishi"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["cargo", "derive"] }
env_logger = "0.11.11"
log = "0.4.33"
thiserror = "1"
anyhow = "1"
tempfile = "3"
chrono = { version = "0.4", features = ["clock"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
gist = { git = "https://github.com/sleb/gist", tag = "v0.1.0", version = "0.1.0" }
clap_complete = { version = "4.6.7", features = ["unstable-dynamic"] }
serde_json = "1"

[dev-dependencies]
